Put a title in the readme

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-nodejs server running on a Joyent smart machine - http://no.de
+# Getting to know Node
+
+nodejs server running on a Joyent smart machine - http://gram.no.de
